# EmbeddedBuildsystem

./: CMakeLists.txt  README.md  build_project.bat
build_make/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EMBEDDEDBUILDSYSTEM.sln  EMBEDDEDBUILDSYSTEM.vcxproj  EMBEDDEDBUILDSYSTEM.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  operations.vcxproj  operations.vcxproj.filters
build_make/EMBEDDEDBUILDSYSTEM.dir/Release/: EMBEDDEDBUILDSYSTEM.exe.recipe
build_make/EMBEDDEDBUILDSYSTEM.dir/Release/EMBEDDED.8CA2C422.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  EMBEDDEDBUILDSYSTEM.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_make/operations.dir/Release/: operations.lib.recipe
build_make/operations.dir/Release/operations.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_make/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_make/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build_make/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
inc/: add.h  div.h  mul.h  sub.h
src/: add.cpp  div.cpp  main.cpp  mul.cpp  sub.cpp
